Implemented /api/flights and /api/airports endpoints

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/deskach/locmote-fsi#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "express": "^4.15.4"
   },
   "devDependencies": {
